@@ -9,10 +9,12 @@ inc/Module/Install/Makefile.pm
 inc/Module/Install/Metadata.pm
 inc/Module/Install/Scripts.pm
 inc/Module/Install/Win32.pm
+inc/Module/Install/WriteAll.pm
 lib/Lingua/Alphabet/Phonetic.pm
 lib/Lingua/Alphabet/Phonetic/NATO.pm
 Makefile.PL
 MANIFEST			This list of files
+META.yml
 phonetize.PL
 README
 t/nato.t
