@@ -1,0 +1,21 @@
+---
+author: 'Martin Thurn <mthurn@cpan.org>'
+build_requires:
+  File::Basename: 0
+  Test::More: 0
+  Test::Pod: 0
+  Test::Simple: 0
+distribution_type: module
+generated_by: Module::Install version 0.65
+license: perl
+meta-spec:
+  url: http://module-build.sourceforge.net/META-spec-v1.3.html
+  version: 1.3
+name: Lingua-Alphabet-Phonetic
+no_index:
+  directory:
+    - inc
+    - t
+requires:
+  perl: 5.004
+version: 0.054
