@@ -17,7 +17,7 @@ To install this module run the following:
 
 COPYRIGHT AND LICENSE
 
-Copyright (C) 2004-2006 Martin Thurn
+Copyright (C) 2004-2007 Martin Thurn
 
 This library is free software; you can redistribute it and/or modify
 it under the same terms as Perl itself. 
